# CFD_PROJECT

./: .gitignore  C++加速使用说明.md  CFD_PROJECT-v0.0.4-complete.bundle  CFD_PROJECT-v0.0.4.bundle  CFD_PROJECT-v0.0.6.bundle  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPP_LIBRARIES.md  LICENSE  README.en.md  README.md  VERSION  add_red_spheres.py  compare_efficiency.py  compare_full.txt  compare_result.txt  compile_cpp_extensions.py  example.py  face_intersection_summary.md  fix_all_indentation.py  fix_high_performance_proximity.py  fix_indentation.py  fix_manually.py  fix_remaining_issues.py  fix_select_adjacent_faces.py  fix_try_blocks.py  generate_complex_3d.py  generate_large_nas.py  improved_compare.py  load_large_py.py  mesh_reader.py  readme_cn.md  requirements.txt  setup.py  setup_adjacent_faces.py  simplified_compare.py  simplified_compare_en.py  temp_flag.txt  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
CFD/: pyvenv.cfg
data/: test_cube.nas  test_cube.stl
docs/: api_reference.md  build_guide.md  football_mesh_guide.md  free_edges_cpp.md  index.md  installation_guide.md  mesh_reader.md  pierced_faces_cpp.md  release_notes_C0.0.1.md  release_notes_V0.0.7.md  release_notes_V0.0.8.md  release_notes_V0.0.9.md  release_notes_V0.1.0.md  release_notes_V0.1.1.md  release_notes_V0.1.2.md  release_notes_V0.1.3.md  roadmap.md  self_intersection_algorithm.md
src/: algorithm_benchmark.py  compare_free_edges.py  compare_pierced_faces.py  create_car_mesh.py  create_car_nas.py  create_football_mesh.py  create_test_files.py  create_test_mesh.py  example.py  setup.py  (+40 more)
(+18 files in other folders)
